# app/serializers/library/reader_blueprint.rb
@@ -1,0 +1,7 @@
+module Library
+  class ReaderBlueprint < Blueprinter::Base
+    identifier :id
+
+    fields :serial_number, :email, :full_name
+  end
+end
